# ComputergrafikProjekt

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
shader/: moon.fs  moon.vs  shader.fs  shader.vs  universebox.fs
src/: glad.c  main.cpp  sphere.cpp
